# focus_65816

./: .gitignore  CMakeLists.txt  CreateVirtualEnvironment.cmake  README.md  addressing_modes.cpp  addressing_modes.hpp  binary_loader  binary_loader.cpp  binary_loader.hpp  cpu.cpp  cpu.hpp  decoder.cpp  decoder.hpp  emulator.cpp  gen_code.py  gen_uops.py  gen_uops_json.py  memory_device.cpp  memory_device.hpp  memory_manager.cpp  memory_manager.hpp  opcode.cpp  opcode.hpp  register_file.hpp  uop_table.txt  uops.json
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  generated_opcodes.hpp  generated_opcodes.json
defs/: uops.json
src/: addressing_modes.cpp  cpu.hpp  decoder.cpp  decoder.hpp  emulator.cpp  memory.cpp  memory.hpp  memory_manager.cpp  memory_manager.hpp  opcodes.cpp  opcodes.hpp  register_file.hpp
tests/: CMakeLists.txt  linker.cfg  test_adc.c  test_adc.lst  test_adc.s  test_and.s  test_asl.s  test_bcc.s  test_bcs.s  test_beq.s  test_bit.s  test_bmi.s  test_bne.s
